--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
-  "repository": {
-    "name": "Voting-App",
-    "version": "1.0.0",
-    "private": true
-  },
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon -w ./ -x npm run start"
-  },
-  "dependencies": {
-    "babel-preset-node5": "^12.0.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.11.0",
-    "express": "^4.16.2",
-    "mysql": "^2.15.0",
-    "sequelize": "^4.22.7",
-    "sequelize-connect": "^2.0.0"
+    "dev": "nodemon -w ./ -x npm run start",
+    "production": "webpack --config ./webpack.production.config.js && NODE_ENV=production npm run start"
   },
   "devDependencies": {
-    "@types/express": "^4.0.39",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-3": "^6.5.0",
+    "eslint": "^2.13.0",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard-jsx": "^1.2.1",
+    "eslint-config-standard-react": "^2.4.0",
+    "eslint-plugin-react": "^5.2.2",
+    "html-webpack-plugin": "^2.16.0",
+    "nodemon": "^1.9.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
-  "babel": {
-    "presets": [
-      "node5"
-    ]
+  "dependencies": {
+    "babel-polyfill": "^6.9.1",
+    "babel-register": "^6.7.2",
+    "body-parser": "^1.15.0",
+    "chalk": "^1.1.3",
+    "chart.js": "^1.1.1",
+    "color": "^0.11.1",
+    "compression": "^1.6.1",
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4",
+    "jquery": "^2.2.3",
+    "mysql": "^2.10.2",
+    "pusher": "^1.3.0",
+    "pusher-js": "^3.1.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
+    "sequelize": "^3.22.0",
+    "sequelize-connect": "^1.2.2"
   }
 }
