--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon -w ./ -x npm run start",
-    "production": "webpack --config ./webpack.production.config.js && NODE_ENV=production npm run start"
+    "dev": "nodemon -w ./ -x npm run start"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
@@ -17,11 +16,11 @@
     "eslint-config-standard-jsx": "^1.2.1",
     "eslint-config-standard-react": "^2.4.0",
     "eslint-plugin-react": "^5.2.2",
-    "html-webpack-plugin": "^2.16.0",
+    "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.9.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack": "^1.15.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
@@ -29,18 +28,19 @@
     "body-parser": "^1.15.0",
     "chalk": "^1.1.3",
     "chart.js": "^1.1.1",
-    "color": "^0.11.1",
-    "compression": "^1.6.1",
+    "color": "^0.11.4",
+    "compression": "^1.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "mysql": "^2.10.2",
-    "pusher": "^1.3.0",
-    "pusher-js": "^3.1.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-router": "^2.3.0",
-    "sequelize": "^3.22.0",
-    "sequelize-connect": "^1.2.2"
+    "pusher": "^1.5.1",
+    "pusher-js": "^3.2.4",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-router": "^2.8.1",
+    "sequelize": "^3.30.4",
+    "sequelize-connect": "^1.3.0",
+    "webpack-config": "^7.5.0"
   }
 }
