--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon -w ./ -x npm run start"
+    "dev": "nodemon -w ./ -x npm run start",
+    "production": "webpack --config ./webpack.production.config.js && NODE_ENV=production npm run start"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-3": "^6.5.0",
@@ -28,19 +30,18 @@
     "body-parser": "^1.15.0",
     "chalk": "^1.1.3",
     "chart.js": "^1.1.1",
-    "color": "^0.11.4",
-    "compression": "^1.7.1",
+    "color": "^0.11.1",
+    "compression": "^1.6.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
     "mysql": "^2.10.2",
-    "pusher": "^1.5.1",
-    "pusher-js": "^3.2.4",
+    "pusher": "^1.3.0",
+    "pusher-js": "^3.1.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-router": "^2.8.1",
-    "sequelize": "^3.30.4",
-    "sequelize-connect": "^1.3.0",
-    "webpack-config": "^7.5.0"
+    "sequelize": "^3.22.0",
+    "sequelize-connect": "^1.2.2"
   }
 }
