--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pusher": "^1.3.0",
     "pusher-js": "^3.1.0",
     "react": "^15.6.2",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.6.2",
     "react-router": "^2.8.1",
     "sequelize": "^3.22.0",
